--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -16,4 +16,7 @@ div {
 
 .disable-select {
 	user-select: none;
+	-webkit-user-select: none; /* Safari */
+	-moz-user-select: none; /* Firefox */
+	-ms-user-select: none; /* IE/Edge */
 }
