--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -8,6 +8,7 @@ body {
 	margin: 0;
 	background-attachment: fixed;
 	touch-action: manipulation; /** prevent double tap zoom */
+	transition: background ease-in-out 1s;
 }
 
 div {
