--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -4,7 +4,7 @@
 }
 
 body {
-	min-height: 100vh;
+	min-height: 100dvh;
 	margin: 0;
 	background-attachment: fixed;
 	touch-action: manipulation; /** prevent double tap zoom */
@@ -20,4 +20,6 @@ div {
 	-webkit-user-select: none; /* Safari */
 	-moz-user-select: none; /* Firefox */
 	-ms-user-select: none; /* IE/Edge */
+
+	-webkit-touch-callout: none;
 }
